# ic-bet

./: Cargo.toml  build.js  dfx.json
candid/: xtc-bet.did
src/: bet.rs  ledger.rs  lib.rs  main.rs  management.rs  upgrade.rs
